# argparse-language-autogen

./: CMakeLists.txt  README.md
tools/: autogencmake.py  autogenlang.py  base_string_class.py  clean-pycache.sh  jsonLanguageDescriptionList.py  jsonStringClassDescription.py  json_default.py  lang_string_class.py  pathgen.py  update_copyright.py
tools/file_tools/: __init__.py  linux_lang_select.py  master_lang_select.py  static_lang_select.py  string_class_tools.py  string_name_generator.py  windows_lang_select.py
tools/file_tools/common/: __init__.py  comment_block.py  copyright_tools.py  cpp_file_gen_base.py  doxygen_gen_tools.py  eula.py  file_gen_tools.py  param_return_tools.py  python_file_gen_base.py  text_format.py  typescript_file_gen_base.py
tools/file_tools/json_data/: jsonHelper.py  jsonLanguageDescriptionList.py  jsonStringClassDescription.py  old__init__.py  param_return_tools.py
